[gd_scene load_steps=2 format=3 uid="uid://dxea7t4cr8v2n"]

[ext_resource type="Script" path="res://src/ems/authoring/event_properties.gd" id="1_rcve2"]

[node name="look_at_event" type="Node" node_paths=PackedStringArray("initialize_audio")]
script = ExtResource("1_rcve2")
initialize_audio = NodePath("initialize_audio")

[node name="initialize_audio" type="AudioStreamPlayer3D" parent="."]

[node name="ongoing_audio" type="AudioStreamPlayer3D" parent="."]

[node name="wait_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]

[connection signal="timeout" from="wait_timer" to="." method="_on_wait_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_entered"]
